--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
     <application
         android:name=".repository.WhimsyWhisk"
+        android:theme="@style/Theme.Finalproject_209.Splash"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +14,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Finalproject_209">
+        android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Finalproject_209">
+            android:theme="@style/Theme.Finalproject_209.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
